# mprov_jobserver

./: .gitignore  Dockerfile  README.md  app.py  dev-docker-compose.yml  install_mprov_jobserver.sh  jobserver.conf  jobserver.yaml  jobserver.yaml.j2  main.py  mprov_jobserver.conf  mprov_jobserver.service  repack_image  requirements.txt  setup.cfg  setup.py  stack.env  start_server.sh  systemd-system.conf
.github/workflows/: ci_build.yml  dockerimage-dev.yml  dockerimage.yml  pypi.yml  update_website.yml
plugins/: __init__.py  dhcp_update.py  dns_update.py  dnsmasq.py  dnsmasq.yaml  iamge-delete.yaml  image-server.yaml  image-sync.yaml  image-update.yaml  image_delete.py  image_server.py  image_sync.py  image_update.py  nads.py  nads.yaml  plugin.py  pxe_update.py  repo_update.py  script-runner.yaml  script_runner.py
plugins/dnsmasq_mod/: config.py  dhcp.py  dns.py
src/mprov_jobserver/: app.py  jobserver.yaml  main.py  mprov_jobserver  script.py
src/mprov_jobserver/plugins/: dhcp_delete.py  dns_delete.py  dnsmasq.py  dnsmasq.yaml  image_server.py  image_sync.py  image_update.py  libgenders.py  mprov-webserver.yaml  mprov_webserver.py  nads.py  nads.yaml  plugin.py  pxe_delete.py  repo-delete.yaml  repo-update.yaml  repo_delete.py  repo_sync.py  repo_update.py  script_runner.py
src/plugins/: image-server.yaml  image_delete.py  image_update.py
src/templates/dnsmasq/: dhcp.conf.j2  dns_host.conf.j2  menu.ipxe.j2
templates/dnsmasq/: dhcp.conf.j2  dhcp_host.conf.j2  dns.conf.j2  dns_host.conf.j2  ipxe.conf.j2
templates/image-update/: script-runner.sh
(+14 files in other folders)
