[metadata]
name = mprov_jobserver
author = Jason Williams
author_email = jasonw@jhu.edu
description = The job server component of mProv 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mprov-ng/mprov_jobserver
project_urls =
    Bug Tracker = https://github.com/mprov-ng/mprov_jobserver/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
scripts = src/mprov_jobserver/mprov_jobserver
include_package_data = True
[options.packages.find]
where = src


[options.package_data]
* = *.yaml, templates/*/*